AppBuilderDemoOrg/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>LTA_to_Email__c</fullName>
        <label>LTA to Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LTA_to__c</fullName>
        <label>LTA to</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Long_Text_Area__c</fullName>
        <label>Test Long Text Area To Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>